<resources>
    <string name="app_name">CHN微校</string>
    <string name="prototal_title">微校协议及隐私政策</string>
    <string name="prototal_agree">同意</string>
    <string name="prototal_disagree">不同意</string>
    <string name="agree_start">开始体验</string>
    <string name="service_error">您所在的服务器地址配置问题，请联系管理员</string>
    <string name="service_offline_error">您所在的服务器不在线，请联系管理员</string>
    <string name="oa_file_preview_service_init_error">文件预览服务初始化失败，首次安装，请先等待片刻，然后杀掉进程重启app。当天多次卸载安装，请在网络状况良好的情况下，尝试将系统时间设置到明天，杀掉进程后重新启动app。上述方式仍不能解决问题，请联系管理部</string>
    <string name="prototal_content1">"您在使用微校产品/服务前，请仔细阅读并充分理解《个人信息保护及隐私政策》、《用户协议》。当您点击同意，即表示您已经理解并同意该条款，该条款将构成对您具有法律约束力的文件。\n"</string>
    <string name="prototal_content21">"隐私政策主要包含以下内容：</string>
    <string name="prototal_content22">"个人信息的收集使用规则及权限调用情况；"</string>
    <string name="prototal_content23">"您确认本弹窗并不会直接开启相关权限，我们会就具体权限开启另行征得您的同意。"</string>
    <string name="prototal_content3">"未经您的单独同意，我们不会主动向任何第三方共享您的个人信息。当您使用一些功能服务时，我们可能会在获得您的明示同意后, 从授权第三方处获取、共享或向其提供信息。您可阅读《第三方SDK说明》了解详细信息。"</string>
    <string name="dialog_prototal_content">"您需要同意本隐私协议才能继续使用"</string>
    <string name="dialog_prototal_calcel">取消</string>
    <string name="dialog_prototal_ok">查看协议</string>
    <string name="webview_title">详情</string>
    <string name="login_title">用户登录</string>
    <string name="wxbind_title">绑定账户</string>
    <string name="login_title1">用户登录</string>
    <string name="picture_title">附件详情</string>
    <string name="share">分享</string>
    <string name="attachment_title">附件详情</string>
    <string name="video_title">查看视频</string>
    <string name="oa_cant_open_resource">正在下载内核，请稍后重试</string>
    <string name="login_family">家长身份</string>
    <string name="login_teacher">老师身份</string>
    <string name="login_agreen">我已阅读并同意《隐私政策》《用户服务协议》</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_register">申请开通></string>
    <string name="login_input_account_hint">请输入账户</string>
    <string name="login_input_name_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="bind">绑定</string>
    <string name="login_wx_text">微信登录</string>
    <string name="login_account_error">请输入账号</string>
    <string name="login_username_error">请输入用户名</string>
    <string name="login_password_error">请输入密码</string>
    <string name="login_private_error">请同意服务协议及隐私政策</string>
    <string name="login_token_error">登录失败,token为空</string>
    <string name="loading">登录中...</string>
    <string name="downloading">下载中...</string>
    <string name="login_copyright">Copyrigh @ 2021 中国微校 All Rights Reserved</string>
    <string name="tab_home">主页</string>
    <string name="tab_news">专家论坛</string>
    <string name="tab_contacts">通讯录</string>
    <string name="tab_message">消息</string>
    <string name="tab_oa">移动办公</string>
    <string name="tab_mine">更多</string>
    <string name="press_back_twice">再按一次退出</string>
    <string name="contact_title">通讯录</string>
    <string name="school_contact">学校通讯录</string>
    <string name="contact_recent_people">最近联系人</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="toast_error_net">网络有问题，亲等等再看吧!</string>
    <string name="failed_login_tip">IM初始化失败</string>
    <string name="capture_permission_title">权限提示</string>
    <string name="capture_permission_message">必须的权限没有得到授权，功能将无法使用 请重新授权!</string>
    <string name="capture_permission_no">不</string>
    <string name="capture_permission_ok">好的</string>
    <string name="capture_permission_never_ask">权限被禁止了，无法使用相关功能，请到应用设置中心里面打开权限</string>
    <string name="capture_permission_never_ask_message">我们需要获取相机、存储相关权限，用于选择照片，文件；否则，你将无法正常使用本应用\n设置路径：设置->应用->中国微校->权限</string>
    <string name="capture_permission_never_ask_cancel">取消</string>
    <string name="capture_permission_never_ask_setting">去设置</string>
    <string name="im_error_status">IM初始化失败，请退出登录重试</string>
</resources>