<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_brand_bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.icefire.chnsmile.ui.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:enableBack="false"
        app:titleName="@string/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_family"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_family"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_checked_selector"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tv_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/login_family"
                    android:textColor="@color/tv_brand_color_selected" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/iv_teacher"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_checked_selector"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tv_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/login_teacher"
                    android:textColor="@color/tv_brand_color_selected" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_login_input"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:clickable="false"
                android:scaleType="fitXY"
                android:src="@drawable/ic_phone" />

            <!--  老师  18011393295  家长 13311223711 -->

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/login_input_name_hint"
                android:lines="1"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:imeOptions="actionNext"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/bg_login_input"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:clickable="false"
                android:scaleType="fitXY"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/login_input_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:lines="1"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/ll_agreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <com.icefire.chnsmile.views.UICheckBox
                    android:id="@+id/ck_agreen"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_checked_selector"
                    android:layout_marginRight="7dp"/>

                <TextView
                    android:id="@+id/tv_agreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_agreen"
                    android:textColor="@color/text_gray1" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_forget"
                android:layout_below="@+id/ll_agreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_forget"
                android:textColor="@color/ui_brand_color" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:text="@string/login_register"
                android:textColor="@color/ui_brand_color"
                android:visibility="gone" />

        </RelativeLayout>

        <Button
            android:id="@+id/action_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ui_loading_btn_bg_selector"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/wx_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ui_loading_btn_bg_selector_green"
            android:gravity="center"
            android:text="@string/login_wx_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/login_copyright"
        android:textColor="@color/ui_border_gray_1_color"
        android:textSize="13sp" />


</RelativeLayout>