<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_brand_bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.WxBindActivity">

    <com.icefire.chnsmile.ui.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:enableBack="true"
        app:titleName="@string/wxbind_title" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="#333"
        android:layout_marginEnd="20dp"
        android:text="您的微信账号未绑定过微校账号，请输入账号、密码后进行绑定，如果不知道账号密码请联系客服" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:clickable="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_phone" />

        <!--  老师  18011393295  家长 13311223711 -->

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/login_input_account_hint"
            android:imeOptions="actionNext"
            android:lines="1"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bg_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:clickable="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/login_input_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/action_bind"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ui_loading_btn_bg_selector"
        android:gravity="center"
        android:text="@string/bind"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>