<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--引导页面-->
    <RelativeLayout
        android:id="@+id/load_rl_guide_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/load_guide_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.viewpager.widget.ViewPager>

        <Button
            android:id="@+id/load_guide_start"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:background="@null"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>


    <!-- 用户协议页面 -->
    <RelativeLayout
        android:id="@+id/load_protocol_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:gravity="bottom">

            <TextView
                android:id="@+id/load_protocol_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/iv_head"
                android:text="@string/prototal_title"
                android:textColor="#43434A"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/protocol_head" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/ll_head"
            android:layout_above="@+id/ll_bottom"
            android:background="#FFF8FAFB"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/load_protocol_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="2dp"
                android:padding="16dp"
                android:text="@string/prototal_content1"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/load_protocol_content21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/prototal_content21"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/load_protocol_content22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2dp"
                    android:padding="16dp"
                    android:drawableLeft="@drawable/ic_text1"
                    android:drawablePadding="10dp"
                    android:text="@string/prototal_content22"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/load_protocol_content23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:drawableLeft="@drawable/ic_text2"
                    android:drawablePadding="10dp"
                    android:text="@string/prototal_content23"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/load_protocol_content3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="2dp"
                    android:padding="16dp"
                    android:text="@string/prototal_content3"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp">

            <Button
                android:id="@+id/load_protocol_disagree"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/load_protocol_button_disagree_bg"
                android:stateListAnimator="@null"
                android:text="@string/prototal_disagree"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Button
                android:id="@+id/load_protocol_agree"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="2"
                android:textSize="16dp"
                android:background="@drawable/ui_loading_btn_bg_selector"
                android:text="同意"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
